[package]
name = "wasmtime-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "redis_wasm"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
redis-module = "2.0.4"
wasmtime = "9.0.3"
